fix(product-card): prevent image from stretching card and breaking layout

--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,6 +1,8 @@
 @use "../../styles/variables" as *;
 
 .product-card {
+  display: flex;
+  flex-direction: column;
   width: 270px;
   height: 310px;
   border: solid 2px $color-secondary;
@@ -10,11 +12,15 @@
     cursor: pointer;
     text-decoration: none;
     color: inherit;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
   }
   .product-img {
     width: 100%;
-    height: auto;
+    height: 180px;
     border-bottom: solid 1px $color-secondary;
+    object-fit: contain;
   }
   .product-name {
     display: flex;
